# maxisight

./: .gitignore  AGENT_PLAN.md  project_architecture.md  project_maxisight.md  project_progress.md  project_user.md  pyproject.toml
docs/: mygreenhouse-inertia-reverse-engineering.md
scripts/: find_greenhouse_api.py
src/maxisight/: __init__.py  _cli.py  _consts.py  config.py  errors.py  models.py
src/maxisight/auth/: __init__.py  greenhouse.py
src/maxisight/crawler/: __init__.py  greenhouse.py
src/maxisight/enricher/: greenhouse.py
src/maxisight/scorer/: profile.py  scorer.py
src/maxisight/storage/: __init__.py  job_dataset.py
storage/datasets/scored/: mygreenhouse_software_engineer_2026-06-06.json
storage/profiles/: default.json
storage/sessions/: greenhouse.json
tests/: test_greenhouse_slug_crawler.py  test_mygreenhouse_auth_check.py  test_scorer_formula.py  test_scorer_integration.py  test_scorer_signals.py
