[project]
name = "maxisight"
version = "0.1.0"
description = "Open source infrastructure for job automation"
readme = "README.md"
authors = [
    { name = "Viswa Yadeedya", email = "viswayadeedya@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "hatchling>=1.30.1",
    "playwright>=1.60.0",
    "rapidfuzz>=3.14.5",
]

[project.optional-dependencies]
cli = ["typer>=0.12.0", "rich>=13.0.0"]
crawler = ["httpx>=0.27.0", "pydantic>=2.0.0"]
all = ["maxisight[cli,crawler]"]

[project.scripts]
maxisight = "maxisight._cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maxisight"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
